(next release) on (date of next release)
17.05.00 VZ: added possibility to attach vCards to outgoing messages
             added vCard import module for the address book editor
16.05.00 KB: Calendar module does repeating events (minor glitches still)
15.05.00 KB: Mahogany now runs as "root", too. Fixes to MailCollector and invocation
             of filters. de.po is up to date.
12.05.00 VZ: added "compose with template" and "edit templates"
09.05.00 VZ: implemented reply/forward/followup with template menu commands
09.05.00 VZ: version number bumped to 0.60
03.05.00 KB: Started work on a small calendar plugin
02.05.00 VZ: folder renaming implemented
02.05.00 VZ: the log window can be shown/hidden, closing it hides it permanently
01.05.00 VZ: initial wizard small fixes: don't create servers not specified
             possibility to remember the password entered interactively
             it is possible to _not_ use Outbox and/or New Mail folders now
             the config file is, finally, created with the correct permissions
29.04.00 KB: MailFolder API cleanup, server config setting fixes,
             wxLayout fixes
26.04.00 VZ: drag and drop works with other folder views (frames) too
23.04.00 VZ: added drag and drop of messages to the folder tree
23.04.00 VZ: added "Quick move" submenu to folder popup menu
18.04.00 VZ: dynamic plug-in (modules) loading works under Windows

     0.50        March 27, 2000
24.03.00 VZ: startup tips
             creating MH folders from subfolders dialogs works
23.03.00 KB: Finished folder creation wizard. Fixed inheritance of FolderView column sizes.
             Fixed some dialog sizes. Filters dialog behaves slightly better and uses folder
             browse button. Fixed error message appearance in PalmOS.cpp.
22.03.00 KB: Filters config dialog extended. BBDB ADB supports read-only status.
             Folder creation wizard work.
14.03.00 VZ: added changing folder colours depending on whether they have